<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/pay_list_item"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/pic_logo" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_name"
            style="@style/pay_right_item"
            android:layout_weight="4"
            android:text="@string/pay_right2" />

        <TextView
            android:id="@+id/tv_unit"
            style="@style/pay_right_item"
            android:layout_weight="1"
            android:text="@string/pay_right3"
             />

        <TextView
            android:id="@+id/tv_num"
            style="@style/pay_right_item"
            android:layout_weight="1"
           
            android:text="@string/pay_right4"
            />

        <TextView
            android:id="@+id/tv_price"
            style="@style/pay_right_item"
            android:layout_weight="1"
            android:text="@string/pay_right5"
            />

        <LinearLayout
            android:id="@+id/ll_delete"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center" >

            <ImageView
                
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/delete" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>