<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/myapp_logo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginRight="3dp"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:orientation="vertical" >

            <TextView
            	android:id="@+id/myapp_name"
                style="@style/text_18_dark_grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
            	android:id="@+id/myapp_detail"
                style="@style/text_16_white_grey_without_parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="3dp"
                android:text="@string/name_detail" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/myapp_lay3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/myapp_update3"
            style="@style/text_16_white"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border_green"
            android:text="@string/updata" />

        <TextView
            android:id="@+id/myapp_open3"
            style="@style/text_16_blue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@drawable/border_blue"
            android:text="@string/open" />

        <TextView
            android:id="@+id/myapp_uninstall3"
            style="@style/text_16_white_grey"
            android:background="@drawable/border_grey"
            android:text="@string/uninstall" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/myapp_lay2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/myapp_open2"
            style="@style/text_16_blue_without_parent"
            android:layout_width="92dp"
            android:layout_height="match_parent"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:background="@drawable/border_blue"
            android:text="@string/open" />

        <TextView
            android:id="@+id/myapp_uninstall2"
            style="@style/text_16_white_grey_without_parent"
            android:layout_width="92dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/border_grey"
            android:text="@string/uninstall" />
    </LinearLayout>
</LinearLayout>