<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl4"
        style="@style/matchPar2"
        android:background="@color/main_icon4" >

        <ImageView
            android:id="@+id/imageView4"
            style="@style/mainIconImage"
            android:src="@drawable/main_icon4" />

        <TextView
            android:id="@+id/textView4"
            style="@style/leftIconText"
            android:layout_below="@+id/imageView4"
            android:text="@string/main_icon4" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl3"
        style="@style/matchPar2"
        android:background="@color/main_icon3" >

        <ImageView
            android:id="@+id/imageView3"
            style="@style/mainIconImage"
            android:src="@drawable/main_icon3" />

        <TextView
            android:id="@+id/textView3"
            style="@style/leftIconText"
            android:layout_below="@+id/imageView3"
            android:text="@string/main_icon3" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl2"
        style="@style/matchPar2"
        android:background="@color/main_icon2" >

        <ImageView
            android:id="@+id/imageView2"
            style="@style/mainIconImage"
            android:src="@drawable/main_icon2" />

        <TextView
            android:id="@+id/textView2"
            style="@style/leftIconText"
            android:layout_below="@+id/imageView2"
            android:text="@string/main_icon2" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl1"
        style="@style/matchPar2"
        android:background="@color/main_icon1" >

        <ImageView
            android:id="@+id/imageView1"
            style="@style/mainIconImage"
            android:src="@drawable/home" />

        <TextView
            android:id="@+id/textView1"
            style="@style/leftIconText"
            android:layout_below="@+id/imageView1"
            android:text="返回" />
    </RelativeLayout>

</LinearLayout>