<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_search_myapp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:background="@drawable/et_grey"
                android:gravity="center"
                android:hint="@string/search_hint" />

            <RelativeLayout
                android:id="@+id/search_myapp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/search_blue" >

                <TextView
                    style="@style/text_18_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:drawableLeft="@drawable/search"
                    android:text="@string/search" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="5"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white_grey" />

        <TextView
            style="@style/text_18_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usual_app" />

        <GridView
            android:id="@+id/myapp_usual_gridView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:horizontalSpacing="10dp"
            android:numColumns="3"
            android:stretchMode="columnWidth"
            android:verticalSpacing="20dp" />

        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_weight="10"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white_grey" />
        
        <TextView
            style="@style/text_18_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_app" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp" >

            <com.eastcom.social.pos.component.ScrollLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/scroll_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.eastcom.social.pos.component.PageControlView
                android:id="@+id/page_control"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_alignParentBottom="true"
                android:gravity="center" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>